--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
-    "tailwindcss": "^4.0.17"
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "tailwindcss": "^4.0.17",
+    "typescript": "5.8.3"
   }
 }
