--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-geocode": "^2.0.1",
     "react-icons": "^5.5.0",
+    "react-map-gl": "^8.0.2",
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.17",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
-    "tailwindcss": "^4.0.17",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "5.8.3"
   }
 }
